--- a/src/main/resources/assets/steamcraft/lang/en_US.lang
+++ b/src/main/resources/assets/steamcraft/lang/en_US.lang
@@ -99,7 +99,7 @@ research.Heater.name=Steam Heater
 research.Heater.0=Now I can power furnaces using steam power, using this nifty steam heater. <br>Steam heats the copper coils and allows a furnace to smelt without fuel. More heaters will smelt faster but use more steam.
 research.Filler.name=Steam Filler
 research.Filler.0=Pipes are great for transporting steam to fixed machines, but they're not much good to supply power to tools or armor. That's where the steam filler comes in.<br>I simply place in a steam-using device and wait.
-research.Filler.1=Furthermore, I no longer have to remove the item in order to check its progress. If I attach a gauge to the steam filler, I can measure the current steam level of the item being filled.
+research.Filler.1=Furthermore, I do not have to remove the item in order to check its progress. If I attach a gauge to the steam filler, I can measure the current steam level of the item being filled.
 research.ItemMortar.name=Item Mortar
 research.ItemMortar.0=I've found an ingenious way to transport items - a pressurized steam cannon!<br>This mortar will launch items skyward, at a high trajectory, to land at a targeted location.
 research.ItemMortar.1=Simply insert items via a hopper, set a target, and watch items fly.<br>An astrolabe is my device of choice for aiming the mortar. First, I have to shift-right click on the targeted location with an astrolabe, and then right click on the mortar to calibrate it.
