--- a/src/main/resources/assets/steamcraft/lang/en_US.lang
+++ b/src/main/resources/assets/steamcraft/lang/en_US.lang
@@ -263,13 +263,17 @@ item.steamcraft:musket.name=Flintlock Musket
 item.steamcraft:pistol.name=Flintlock Pistol
 item.steamcraft:revolver.name=Flintlock Revolver
 item.steamcraft:blunderbuss.name=Flintlock Blunderbuss
-item.steamcraft:blunderbussAblaze.name=Ablaze Flintlock Blunderbuss
+item.steamcraft:blunderbussAblaze.name=Blazing Flintlock Blunderbuss
+item.steamcraft:blunderbussSpeedloader.name=Bolt Action Flintlock Blunderbuss
 item.steamcraft:spyglass.name=Spyglass
+item.steamcraft:enhancementAblaze.name=Blaze Barrel
+item.steamcraft:enhancementSpeedloader.name=Bolt Action
+item.steamcraft:enhancementRevolver.name=Revolver Chamber
+item.steamcraft:enhancementSilencer.name=Makeshift Silencer
 item.steamcraft:musketMarksman.name=Marksman's Flintlock Musket
-enhancement.steamcraft:musketMarksman=Marksman's Scope
-item.steamcraft:musketAblaze.name=Ablaze Flintlock Musket
-enhancement.steamcraft:musketAblaze=Ablaze
-enhancement.steamcraft:revolver=Revolver Kit
+item.steamcraft:musketSpeedloader.name=Bolt Action Flintlock Musket
+item.steamcraft:musketAblaze.name=Blazing Flintlock Musket
+item.steamcraft:pistolSilencer.name=Assassin's Flintlock Pistol
 
 item.steamcraft:exoArmorHead.name=Steam Exosuit Headpiece
 item.steamcraft:exoArmorBody.name=Steam Exosuit Chestpiece
