Charging pad stuff

--- a/src/main/resources/assets/steamcraft/lang/en_US.lang
+++ b/src/main/resources/assets/steamcraft/lang/en_US.lang
@@ -250,6 +250,24 @@ research.Parts.name=Weapon Parts
 research.Parts.0=Flintlock weapons are extremely intricate devices, and I'll need to craft some complex devices in order to make them. This section details exactly how to do that.
 research.Musket.name=Flintlock Musket
 research.Musket.0=I have found a way to harness the power of fire to make an efficient killing machine: the musket. This device requires reloading between every shot, using musket cartridges as ammunition. Hold right click to reload and to aim.
+research.EnhancementSpyglass.name=Spyglass
+research.EnhancementSpyglass.0=I have found that I can equip my musket with a spyglass in order to more accuratly target foes. This allows me to zoom in while firing and slightly increases my accuracy.
+research.EnhancementAblaze.name=Blaze Barrel
+research.EnhancementAblaze.0=Equipping my musket with a special barrel imbued with the infernal power of the blaze superheats my musket balls, lighting my targets on fire.
+research.EnhancementAblaze2.name=Blaze Barrel
+research.EnhancementAblaze2.0=Equipping my blunderbuss with a special barrel imbued with the infernal power of the blaze superheats my musket balls, lighting my targets on fire.
+research.EnhancementSpeedloader.name=Bolt Action
+research.EnhancementSpeedloader.0=I've found a much more efficient way to reload my musket: the bolt action. Installing this mechanism on my musket will significantly decrease reload times.
+research.EnhancementSpeedloader2.name=Bolt Action
+research.EnhancementSpeedloader2.0=I've found a much more efficient way to reload my blunderbuss: the bolt action. Installing this mechanism on my blunderbuss will significantly decrease reload times.
+research.EnhancementRecoil.name=Recoil Pad
+research.EnhancementRecoil.0=A simple recoil pad made of slime can significantly decrease the knockback and recoil I recieve from the blunderbuss, while also increasing accuracy.
+research.EnhancementRevolver.name=Revolver Chamber
+research.EnhancementRevolver.0=Installing a revolver chamber in my pistol allows me to shoot six shots before a long reload, albeit with a side effect of decreased damage.
+research.EnhancementSilencer.name=Makeshift Suppressor
+research.EnhancementSilencer.0=While it might not be pretty, this makeshift suppressor helps to quiet my shots, and prevents them from aggravating normally passive beings, such as pigmen.
+research.EnhancementSpeedy.name=Breech
+research.EnhancementSpeedy.0=Adding a breech to my pistol makes it even better at quick attacks. The breech loading mechanism significantly decreases reload times as well as allowing me to run while reloading.
 research.Blunderbuss.name=Flintlock Blunderbuss
 research.Blunderbuss.0=Using a larger brass barrel with modified musket mechanisms makes for an interesting combination, I call it a blunderbuss. This device shoots multiple inaccurate shots at once, allowing me to hit many foes.
 research.Pistol.name=Flintlock Pistol
