--- a/src/main/resources/assets/steamcraft/lang/en_US.lang
+++ b/src/main/resources/assets/steamcraft/lang/en_US.lang
@@ -141,7 +141,7 @@ research.Filler.name=Steam Filler
 research.Filler.0=Pipes are great for transporting steam to fixed machines, but they're not much good to supply power to tools or armor. That's where the steam filler comes in.<br>I simply place in a steam-using device and wait.
 research.Filler.1=Furthermore, I do not have to remove the item in order to check its progress. If I attach a gauge to the steam filler, I can measure the current steam level of the item being filled.
 research.FillingPad.name=Filling Pad
-research.FillingPad.0=Filling my exosuit can be extremely time-consuming. I've created a device that allows me to charge my suit much more quickly, and easily. Simply standing on this pad will deploy pipes to charge my exosuit, at around twice the rate of the filler.
+research.FillingPad.0=Filling my exosuit can be extremely time-consuming. I've created a device that allows me to charge my suit much more quickly and easily. Simply standing on this pad will deploy pipes to charge my exosuit, at around twice the rate of the filler.
 research.ItemMortar.name=Item Mortar
 research.ItemMortar.0=I've found an ingenious way to transport items - a pressurized steam cannon!<br>This mortar will launch items skyward, at a high trajectory, to land at a targeted location.
 research.ItemMortar.1=Simply insert items via a hopper, set a target, and watch items fly.<br>An astrolabe is my device of choice for aiming the mortar. First, I have to shift-right click on the targeted location with an astrolabe, and then right click on the mortar to calibrate it.
